# afunc-agent

./: .gitignore  .rooignore  .roomodes  AFUNC.md  AGENTS.md  AGENT_CHANGELOG.md  AGENT_README.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_inputs.txt  makefile_analysis.md  project_structure.md  prompts.txt  test_add  test_add.cpp
.bmad-core/: core-config.yaml  install-manifest.yaml
.bmad-core/workflows/: ai-coding-workflow.md
.roo/commands/: git-commit-push.md  run-afunc.md  run-simple-task.md  run-task.md  temp-task.md
afunc/: README.md
afunc/afuncs/: configure-build-system.yaml  echo.yaml  generate-cmakelists.yaml  generate-document.yaml  generate-readme.yaml  generate-service-test-script.yaml  implement-cpp-function.yaml  implement-crewai-agents.yaml  implement-openai-compatible-api.yaml  make-to-cmake-migration.md  read-makefile.yaml  read-project.yaml  run-cmake-target.yaml  run-openai-api.yaml  setup-python-venv.yaml  test-agent-service.yaml
afunc/tasks/: 00-root-task.md  01-feature-add-task.md  afunc-runner.md  implement-core-features.md  implement-cpp-library.md  make-to-cmake-migration.md  project-init.md  test-echo.md
afunc/templates/: agents-tmpl.md  func-tmpl.md  prd-tmpl.md
docs/: afunc-spec.md  architecture.md  cpp-project-standards.md  deviations.md  prd.md  task-organization.md
docs/func/: ens_api.md  generate-cmakelists.md  generate-cmakelists.yaml  make-to-cmake-migration.md  make_to_cmake.md  read-makefile.md  read-makefile.yaml  read-project.md  read-project.yaml  run-cmake-target.md  run-cmake-target.yaml
docs/stories/: 001.001.add-api.md
docs/tasks/: 00-root-task.md  01-feature-add-task.md
docs/templates/: architecture-tmpl.md  func-tmpl.md  prd-tmpl.md  task-tmpl.md
example-add/: README.md
example-add/docs/: architecture.md  cpp-project-standards.md  prd.md
example-add/docs/func/: run-cmake-target.yaml
example-add/docs/tasks/: 00-root-task.md  01-feature-add-task.md
example-add/docs/templates/: task-tmpl.md
examples/add-op/: .rooignore  AGENTS.md  CMakeLists.txt  README.md  afunc  implement-core-features.md  prompts.txt  需求设计文档.md
examples/add-op/docs/: architecture.md
examples/add-op/include/: add.h  unified_api.h
examples/add-op/include/export/: api.h
examples/add-op/src/: addf.cpp  addi.cpp  export_api.cpp  unified_api.cpp
examples/add-op/tests/: test_addf.cpp  test_addi.cpp
examples/ai-round/: .env  .env.example  AGENTS.md  AI圆桌会MVP技术方案.md  agent.py  main.py  multiagent.py  requirements.txt  test_service_template.py
examples/ai-round/local_afunc/tasks/: 01-env-setup.md  02-multi-agent.md  02-single-agent.md  03-api-integration.md  03-multi-agent.md  04-api-integration.md  04-webui-integration.md  05-documentation.md  06-documentation.md
examples/ai-round/tests/: test_agent_service.py  test_multiagent_service.py  test_openai_service.py
examples/lmbench/: PRD文档.md  README.md  common.js  dataExport.js  dataHandler.js  filterChart.js  index.html  new_data.json  sampleData.js  sample_data.json  script.js  styles.css  数据展示系统_PRD.md  设计文档.md
examples/lmbench/v1/: common.js  dataHandler.js  new_data.json  styles.css  设计文档.md
examples/lmbench/v2/: PRD文档.md  common.js  dataExport.js  dataHandler.js  filterChart.js  index.html  sampleData.js  styles.css
examples/lmbench/v3/: common.js  dataExport.js  dataHandler.js  filterChart.js  index.html  main.js  sampleData.js  styles.css
include/: add.h  unified_api.h
script/: reset-cmake.sh  reset.sh  restore-link.sh
src/: CMakeLists.txt  add.cpp  addf.cpp  addi.cpp  unified_api.cpp
src/include/operators/: add.h  operator.h
src/operators/: add.c
test/: CMakeLists.txt  test_add.c
tests/: test_add.cpp  test_addf.cpp  test_addi.cpp
tests/operators/: test_add.c
